# safaribooksv2

./: .gitignore  README.md  main.py  orlydl.spec  pyproject.toml  requirements.txt  ty.toml
.github/workflows/: build.yml
src/: constants.py  epub.py  handler.py  main.py  orlydl.py  utils.py
src/browser_cookie3/: __init__.py
