[project]
name = "safaribooksv2"
version = "1.0.0"
description = "Downloads EPUBs from Safaribooksv2"
authors = [
    {name = "Seppel Kuhn",email = "krimbokrampus@tutamail.com"}
]
license = "Unlicense"
license-files = [
    "UNLICENSE",
    "LICENSES/*"
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyquery (>=2.0.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "lz4 (>=4.4.5,<5.0.0)",
    "pycryptodomex (>=3.23.0,<4.0.0)",
    "shadowcopy (>=0.0.4,<0.0.5) ; sys_platform == \"win32\"",
    "dbus-python (>=1.4.0,<2.0.0) ; sys_platform == \"bsd\" or sys_platform == \"linux\"",
    "jeepney (>=0.9.0,<0.10.0) ; sys_platform == \"bsd\" or sys_platform == \"linux\"",
]

[tool.poetry]
packages = [{include = "src"}]
